# nbjlcode-linear

./: README.md
Codecs/: .cproject  .project  CMakeLists.txt  Makefile  benchCompression  benchCompression.cpp  runbenchCompression.sh  runbenchDeltaCompression.sh  runbenchLRCompression.sh
Codecs/.metadata/: version.ini
Codecs/.metadata/.plugins/org.eclipse.core.resources/: 0.snap
Codecs/generate/: SIMDMasks.cpp  generate_SIMDMasks.py  generate_ScalarUnpackers.py  generate_VerticalUnpackers.py  generate_varintGBTables.py  generate_varintGUTables.py  varintGBTables.cpp  varintGUTables.cpp
Codecs/generateLatexTables/: generateTables.py
Codecs/include/: Array.h  Bits.h  CodecFactory.h  Delta.h  DeltaFactory.h  Histogram.h  HorAVXUnpacker.h  HorSSEUnpacker.h  HorScalarUnpacker.h  HorUnpacker.h  IndexInfo.h  IndexLoader.h  IntegerCodec.h  LinearRegression.h  LinearRegressionFactory.h  LinearRegressionIMP.h  NewPFor.h  OptPFor.h  OptRice.h  Portability.h  Rice.h  Simple16.h  Simple9.h  Unary.h  VerAVXUnpacker.h  VerSSEUnpacker.h  VerScalarUnpacker.h  VerUnpacker.h  common.h  compressionstats.h  displayHelper.h  entropy.h  regressionstats.h  util.h  varintG8CU.h  varintG8IU.h  varintGB.h  ztimer.h
Codecs/src/: CodecFactory.cpp  LinearRegressionFactory.cpp
Codecs/stats/: bd_Delta_CPUCodecsStats.txt  bdibda_Delta_CPUCodecsStats.txt  bdr_Delta_CPUCodecsStats.txt  bdtmf_Delta_CPUCodecsStats.txt  gov2_Delta_CPUCodecsStats.txt  gov2ibda_Delta_CPUCodecsStats.txt  gov2r_Delta_CPUCodecsStats.txt  gov2tmf_Delta_CPUCodecsStats.txt  gov2url_Delta_CPUCodecsStats.txt
(+131 files in other folders)
